brain/sources/prod-metadata/objects/Availability__c/Availability__c.object-meta.xml
<CustomObject>
    <label>Availability</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Availability ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availabilites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>