brain/sources/prod-metadata/objects/Availability__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date</label>
    <length>40</length>
    <type>Text</type>
</CustomField>