brain/sources/prod-metadata/objects/Availability__c/fields/Date_EST__c.field-meta.xml
<CustomField>
    <fullName>Date_EST__c</fullName>
    <label>Date EST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>