brain/sources/prod-metadata/objects/Availability__c/fields/End_DateTime__c.field-meta.xml
<CustomField>
    <fullName>End_DateTime__c</fullName>
    <label>End DateTime</label>
    <type>DateTime</type>
</CustomField>