brain/sources/prod-metadata/objects/Availability__c/fields/End_Time_EST__c.field-meta.xml
<CustomField>
    <fullName>End_Time_EST__c</fullName>
    <label>End Time EST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>