brain/sources/prod-metadata/objects/Availability__c/fields/Start_Time_EST__c.field-meta.xml
<CustomField>
    <fullName>Start_Time_EST__c</fullName>
    <label>Start Time EST</label>
    <length>20</length>
    <type>Text</type>
</CustomField>