brain/sources/prod-metadata/objects/Availability__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Candidate_Time_Zone</valueSetName>
    </valueSet>
</CustomField>